.provarCaches/00D410000011HE0EAM/objects/rstk__sopackprt__c.object
<CustomObject>
    <description>Packing Slip Print Header - sopackprt__c</description>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__carrierdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__companylogo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__containerid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custref__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__fobdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__frttermdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__packslip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__printed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__prtdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__salesorder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Master Shipper</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__shipviadesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Header</label>
        <referenceTo>rstk__sopack__c</referenceTo>
        <relationshipLabel>Packing Slip Print Headers</relationshipLabel>
        <relationshipName>Packing_Slip_Print_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopackprt_sohdrextn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Header Extension</label>
        <referenceTo>rstk__sohdrextn__c</referenceTo>
        <relationshipLabel>Packing Slip Print Headers</relationshipLabel>
        <relationshipName>sopackprts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__source__c</fullName>
        <label>Packing Slip Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipper</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Packing Slip Print Header</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Print Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>